# MLOps-Project

./: .gitlab-ci.yml  .readthedocs.yaml  Dockerfile  README.md  clearml.conf  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci_pipeline.yml
app/: config.py  conftest.py  dashboard.py  grpc_dashboard.py  grpc_server.py  main.py  ml_service.py  model_service.proto  model_service_pb2.py  s3_service.py  test_main.py
app/tests/: conftest.py  test_main.py
data/: iris_test.json
docs/source/: conf.py  index.rst
gRPC/: grpc_dashboard.py  grpc_server.py  ml_service.py  model_service_pb2.py  model_service_pb2_grpc.py
