[tool.poetry]
name = "hw1"
version = "0.1.0"
description = "HW 1 for MLops"
authors = ["Artem, Mikhail, Nikita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.12"
streamlit = "1.39.0"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
scikit-learn = "^1.5.2"
grpcio = "^1.67.1"
grpcio-tools = "^1.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
