[tool.poetry]
name = "app"
version = "0.1.0"
description = "HW 1 for MLops"
authors = ["Artem, Mikhail, Nikita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.12"
streamlit = "1.39.0"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
scikit-learn = "^1.5.2"
grpcio = "^1.67.1"
grpcio-tools = "^1.67.1"
psutil = "^6.1.0"
python-multipart = "^0.0.17"
boto3 = "1.21.21"
dvc = {version = "2.10.*", extras = ["s3"]}
clearml = "^1.16.5"
matplotlib = "3.5.*"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
moto = "^5.0.23"
httpx = "^0.28.1"
sphinx = "5.*"
sphinx-autobuild = "^2024.10.3"
sphinx-rtd-theme = "1.1.*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
